add angular material

--- a/src/app/log-in/log-in.component.html
+++ b/src/app/log-in/log-in.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="logInForm">
+<div [formGroup]="logInForm" class="container mx-auto">
   <div class="w-full field">
     <label for="email">Email</label>
     <input
