--- a/src/styles.css
+++ b/src/styles.css
@@ -38,3 +38,12 @@ html {
 dialog {
   @apply rounded-lg border-indigo-950 shadow-lg;
 }
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
