--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,19 +1,7 @@
 <div class="container mx-auto">
   <h1>Hello world!</h1>
-  <a routerLink="/post/create">Create A New Post</a>
-  <br />
-  <button type="button" (click)="showLogInModal = true">Log In</button>
+  <a mat-raised-button color="secondary" routerLink="/post/create"
+    >Create A New Post</a
+  >
+  <a mat-raised-button color="primary" routerLink="/log-in">Log In</a>
 </div>
-
-<!-- <dialog #logInDialog>
-    <div class="flex w-full justify-between items-center pb-3">
-        <h2 class="my-0">Log In</h2>
-        <div class="cursor-pointer" (click)="closeLogInModal()">
-            <i class="fa-solid fa-xmark"></i>
-        </div>
-    </div>
-    <app-log-in></app-log-in>
-</dialog> -->
-<app-dialog header="Log In" [isModal]="true" [(visible)]="showLogInModal">
-  <span>test content?</span></app-dialog
->
