--- a/src/app/post-edit/post-edit.component.html
+++ b/src/app/post-edit/post-edit.component.html
@@ -1,8 +1,15 @@
-<div formGroup="postForm" class="container mx-auto">
-    <h1>Create A New Post</h1>
-    <label for="title" class="block">Title</label>
-    <input type="text" formControlName="title" id="title" class="w-full">
-    <label for="body" class="block">Body</label>
-    <textarea name="body" id="body" cols="30" rows="10" formControlName="body" class="w-full"></textarea>
-    <button type="button">Submit</button>
+<div formGroup="postForm">
+  <h1>Create A New Post</h1>
+  <label for="title" class="block">Title</label>
+  <input type="text" formControlName="title" id="title" class="w-full" />
+  <label for="body" class="block">Body</label>
+  <textarea
+    name="body"
+    id="body"
+    cols="30"
+    rows="10"
+    formControlName="body"
+    class="w-full"
+  ></textarea>
+  <button type="button">Submit</button>
 </div>
