--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<mat-toolbar>
+<mat-toolbar id="navbar" color="primary">
   <a mat-button routerLink="/home">Azuki</a>
 </mat-toolbar>
-<router-outlet></router-outlet>
+<main class="container mx-auto my-auto">
+  <router-outlet></router-outlet>
+</main>
