--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
 <mat-toolbar id="navbar" color="primary">
-  <a mat-button routerLink="/home">Azuki</a>
+  <div class="flex w-full justify-between items-center">
+    <a mat-button routerLink="/home">Azuki</a>
+    <a mat-icon-button routerLink="/account"
+      ><mat-icon>account_circle</mat-icon></a
+    >
+  </div>
 </mat-toolbar>
 <main class="container mx-auto my-auto">
   <router-outlet></router-outlet>
