--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,4 @@
-<mat-toolbar id="navbar" color="primary">
-  <div class="flex w-full justify-between items-center">
-    <a mat-button routerLink="/home">Azuki</a>
-    <a mat-icon-button routerLink="/account"
-      ><mat-icon>account_circle</mat-icon></a
-    >
-  </div>
-</mat-toolbar>
+<app-toolbar></app-toolbar>
 <main class="container mx-auto my-auto">
   <router-outlet></router-outlet>
 </main>
