loading width and toolbar logging

--- a/src/app/loading-dialog/loading-dialog.component.html
+++ b/src/app/loading-dialog/loading-dialog.component.html
@@ -1,4 +1,4 @@
-<div class="flex w-full justify-around">
+<div class="flex w-full justify-around min-w-25dvw">
   <h1 mat-dialog-title class="mb-0">{{ caption }}</h1>
 </div>
 <div class="flex w-full justify-around p-10">
