--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,13 +1,16 @@
 <mat-toolbar id="navbar" color="primary">
   <div class="flex w-full justify-between items-center">
     <a mat-button routerLink="/home">Azuki</a>
-    <button
-      mat-icon-button
-      [matMenuTriggerFor]="menu"
-      aria-label="Account button"
-    >
-      <mat-icon>account_circle</mat-icon>
-    </button>
+    <div class="flex gap-2 items-center">
+      <span>{{ username() }}</span>
+      <button
+        mat-icon-button
+        [matMenuTriggerFor]="menu"
+        aria-label="Account button"
+      >
+        <mat-icon>account_circle</mat-icon>
+      </button>
+    </div>
   </div>
 </mat-toolbar>
 <mat-menu #menu>
