add linting. some account page progress

--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,1 +1,4 @@
-<p>account works!</p>
+<div>ID: {{ profile()?.id }}</div>
+<div>Username: {{ profile()?.username }}</div>
+<div>Full Name: {{ profile()?.full_name }}</div>
+<div>Avatar URL: {{ profile()?.avatar_url }}</div>
