full name update working

--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -7,4 +7,5 @@
 <div>Username: {{ profile()?.username }}</div>
 <div>Full Name: {{ profile()?.full_name }}</div>
 <div>Avatar URL: {{ profile()?.avatar_url }}</div>
+<a routerLink="/account/edit">Edit Account</a>
 }
