--- a/src/app/account-edit/account-edit.component.html
+++ b/src/app/account-edit/account-edit.component.html
@@ -20,23 +20,10 @@
     >
     }
   </mat-form-field>
-  <div>
-    <label for="avatar" class="w-full block">Avatar</label>
-    <input
-      #avatarInput
-      (change)="fileUploaded($event)"
-      type="file"
-      placeholder="Upload a file"
-      id="avatar"
-      accept="image/png, image/jpeg"
-    />
-    <img
-      #avatarPreview
-      alt="avatar preview"
-      class="clip-path-circle"
-      width="50px"
-    />
-  </div>
+  <app-image-upload
+    label="Upload a new avatar"
+    (fileSelected)="avatar.setValue($event)"
+  ></app-image-upload>
   <button mat-raised-button color="primary" type="submit" class="mt-4">
     Submit
   </button>
