--- a/src/app/image-upload/image-upload.component.html
+++ b/src/app/image-upload/image-upload.component.html
@@ -1,14 +1,20 @@
-<div class="flex gap-5 items-start">
+<div class="flex flex-col gap-5 items-center">
+  <div>
+    @if(!imageLoaded()){
+    <mat-icon class="image-icon-size">account_circle</mat-icon>
+    }
+    <img
+      #filePreview
+      [ngClass]="imageLoaded() ? '' : 'hidden'"
+      alt="avatar preview"
+      class="clip-path-circle"
+      width="250px"
+      (load)="imageLoaded.set(true)"
+    />
+  </div>
   <button mat-button type="button" (click)="fileInput.click()">
     {{ label }}
   </button>
-  <img
-    [ngClass]="showPreview() ? '' : 'hidden'"
-    #filePreview
-    alt="avatar preview"
-    class="clip-path-circle"
-    width="125px"
-  />
 </div>
 <input
   #fileInput
