working on delete button

--- a/src/app/account-edit/account-edit.component.html
+++ b/src/app/account-edit/account-edit.component.html
@@ -27,6 +27,6 @@
     </mat-form-field>
   </div>
   <button mat-raised-button color="primary" type="submit" class="mt-4">
-    Submit
+    SUBMIT
   </button>
 </form>
