progress on delete

--- a/src/app/account-edit/account-edit.component.html
+++ b/src/app/account-edit/account-edit.component.html
@@ -26,7 +26,10 @@
       }
     </mat-form-field>
   </div>
-  <button mat-raised-button color="primary" type="submit" class="mt-4">
-    SUBMIT
-  </button>
+  <div class="flex w-full justify-end">
+    <button mat-raised-button color="primary" type="submit" class="mt-4">
+      <mat-icon>save</mat-icon>
+      SAVE CHANGES
+    </button>
+  </div>
 </form>
