--- a/src/app/image-upload/image-upload.component.html
+++ b/src/app/image-upload/image-upload.component.html
@@ -1,15 +1,18 @@
 <div class="flex flex-col gap-5 items-center">
   <div>
-    @if(!imageLoaded()){
+    <mat-spinner class="spinner-margin"></mat-spinner>
+    @if(!imageExists()){
     <mat-icon class="image-icon-size">account_circle</mat-icon>
+    } @else if(loading()) {
+    <mat-spinner class="spinner-margin"></mat-spinner>
     }
     <img
       #filePreview
-      [ngClass]="imageLoaded() ? '' : 'hidden'"
+      [ngClass]="imageExists() && !loading() ? '' : 'hidden'"
       alt="avatar preview"
       class="clip-path-circle"
       width="250px"
-      (load)="imageLoaded.set(true)"
+      (load)="loading.set(false)"
     />
   </div>
   <div class="flex gap-3">
