--- a/src/app/image-upload/image-upload.component.html
+++ b/src/app/image-upload/image-upload.component.html
@@ -1,10 +1,9 @@
 <div class="flex flex-col gap-5 items-center">
-  <div>
-    <mat-spinner class="spinner-margin"></mat-spinner>
+  <div class="flex justify-around items-center content-center image-icon-size">
     @if(!imageExists()){
     <mat-icon class="image-icon-size">account_circle</mat-icon>
     } @else if(loading()) {
-    <mat-spinner class="spinner-margin"></mat-spinner>
+    <mat-spinner></mat-spinner>
     }
     <img
       #filePreview
