added bio to profile

--- a/src/app/account-edit/account-edit.component.html
+++ b/src/app/account-edit/account-edit.component.html
@@ -5,26 +5,37 @@
       (fileSelected)="avatarFile.setValue($event)"
       [avatarUrl]="avatarUrl.value"
     ></app-image-upload>
-    <mat-form-field class="flex-grow">
-      <mat-label for="fullName">Full Name</mat-label>
-      <input
-        matInput
-        placeholder="Full Name"
-        class="w-full"
-        type="text"
-        [formControl]="fullName"
-        id="fullName"
-        required
-      />
-      @if (fullName.errors?.['required']) {
-      <mat-error>Full Name is required. </mat-error>
-      } @if (fullName.errors?.['maxlength']) {
-      <mat-error
-        >Names cannot be more than 255 characters. You are currently at
-        {{ fullName.value?.length }}</mat-error
-      >
-      }
-    </mat-form-field>
+    <div class="flex-grow">
+      <mat-form-field class="w-full">
+        <mat-label for="fullName">Full Name</mat-label>
+        <input
+          matInput
+          placeholder="Full Name"
+          type="text"
+          [formControl]="fullName"
+          id="fullName"
+          required
+        />
+        @if (fullName.errors?.['required']) {
+        <mat-error>Full Name is required. </mat-error>
+        } @if (fullName.errors?.['maxlength']) {
+        <mat-error
+          >Names cannot be more than 255 characters. You are currently at
+          {{ fullName.value?.length }}</mat-error
+        >
+        }
+      </mat-form-field>
+      <mat-form-field class="w-full">
+        <mat-label for="bio">Bio</mat-label>
+        <textarea matInput [formControl]="bio" id="bio"></textarea>
+        @if (bio.errors?.['maxlength']) {
+        <mat-error
+          >Bios cannot be more than 4000 characters. You are currently at
+          {{ bio.value.length }}</mat-error
+        >
+        }
+      </mat-form-field>
+    </div>
   </div>
   <div class="flex w-full justify-end">
     <button mat-raised-button color="primary" type="submit" class="mt-4">
