--- a/src/app/log-in/log-in.component.html
+++ b/src/app/log-in/log-in.component.html
@@ -33,6 +33,6 @@
     }
   </mat-form-field>
   <button mat-raised-button color="primary" type="submit" class="mt-4">
-    Submit
+    LOG IN
   </button>
 </form>
