--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -5,7 +5,9 @@
   <mat-card>
     <mat-card-header>
       <mat-card-title>{{ post.title }}</mat-card-title>
-      <mat-card-subtitle>{{ post.author_id }}</mat-card-subtitle>
+      <mat-card-subtitle
+        >{{ post.authorId }} {{ post.createdAt | date }}</mat-card-subtitle
+      >
     </mat-card-header>
     <mat-card-content>
       <p>{{ post.content }}</p>
