--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,4 +2,5 @@
 <a mat-raised-button color="secondary" routerLink="/post/create"
   >Create A New Post</a
 >
+<a mat-raised-button color="primary" routerLink="/register">Sign up!</a>
 <a mat-raised-button color="primary" routerLink="/log-in">Log In</a>
