--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -6,7 +6,8 @@
     <mat-card-header>
       <mat-card-title>{{ post.title }}</mat-card-title>
       <mat-card-subtitle
-        >{{ post.authorId }} {{ post.createdAt | date }}</mat-card-subtitle
+        >{{ post.profile.username }}
+        {{ post.createdAt | date }}</mat-card-subtitle
       >
     </mat-card-header>
     <mat-card-content>
