semantic tag for header content

--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -19,7 +19,7 @@
             }
             <div>{{ post.profile.username }}</div>
           </div>
-          <div>{{ post.title }}</div></mat-card-title
+          <header>{{ post.title }}</header></mat-card-title
         >
       </mat-card-header>
       <mat-card-content>
