almost completely rid of tailwind other than the container stuff

--- a/src/app/account-edit/account-edit.component.html
+++ b/src/app/account-edit/account-edit.component.html
@@ -5,7 +5,7 @@
       (fileSelected)="avatarFile.setValue($event)"
       [avatarUrl]="avatarUrl.value"
     ></app-image-upload>
-    <div class="flex-grow">
+    <div class="grow">
       <mat-form-field class="w-full">
         <mat-label for="fullName">Full Name</mat-label>
         <input
