--- a/src/app/loading-dialog/loading-dialog.component.html
+++ b/src/app/loading-dialog/loading-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="flex w-full justify-around min-w-25dvw">
   <h1 mat-dialog-title class="mb-0">{{ caption }}</h1>
 </div>
-<div class="flex w-full justify-around p-10">
+<div class="flex w-full justify-around pb-10">
   <mat-spinner></mat-spinner>
 </div>
