--- a/src/blurple-dark-theme.scss
+++ b/src/blurple-dark-theme.scss
@@ -79,3 +79,8 @@ a:visited {
 a:active {
   color: #ef6061;
 }
+
+html {
+  font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
