--- a/src/app/profile-picture-edit/profile-picture-edit.component.html
+++ b/src/app/profile-picture-edit/profile-picture-edit.component.html
@@ -6,48 +6,64 @@
       aria-label="Close Edit Profile Picture Dialog"
       type="button"
       tabindex="-1"
+      (click)="dialogRef.close()"
     >
       <mat-icon>close</mat-icon>
     </button>
   </div>
 </div>
-<div mat-dialog-content>
-  <p>The photo that says, "Definitely not a bot!"</p>
-  <div class="flex justify-around items-center image-icon-size">
-    @if(!(publicAvatarUrl.length > 0 )){
-    <mat-icon class="image-icon-size">account_circle</mat-icon>
-    } @else {
-    <div
-      class="relative"
-      [ngClass]="publicAvatarUrl.length > 0 && !loading() ? '' : 'hidden'"
-    >
-      <img
-        [src]="publicAvatarUrl"
-        alt="avatar preview"
-        class="clip-path-circle"
-        width="250px"
-        (load)="loading.set(false)"
-      />
+<div class="dialog-content">
+  <div #profilePic class="profile-pic unhidden">
+    <p>The photo that says, "Definitely not a bot!"</p>
+    <div class="flex justify-around items-center image-icon-size">
+      @if(!(publicAvatarUrl.length > 0 )){
+      <mat-icon class="image-icon-size">account_circle</mat-icon>
+      } @else {
+      <div
+        class="relative"
+        [ngClass]="publicAvatarUrl.length > 0 && !loading() ? '' : 'hidden'"
+      >
+        <img
+          [src]="publicAvatarUrl"
+          alt="avatar preview"
+          class="clip-path-circle"
+          width="250px"
+          (load)="loading.set(false)"
+        />
+      </div>
+      @if(loading()){
+      <mat-spinner></mat-spinner>
+      } }
     </div>
-    @if(loading()){
-    <mat-spinner></mat-spinner>
-    } }
+    <div class="flex gap-2">
+      <button type="button" mat-button color="warn">
+        <mat-icon>delete</mat-icon>
+        Delete
+      </button>
+      <button
+        type="button"
+        mat-flat-button
+        color="primary"
+        (click)="fileInput.click()"
+      >
+        <mat-icon>edit</mat-icon>
+        Edit
+      </button>
+    </div>
   </div>
-</div>
-<div mat-dialog-actions class="flex justify-end w-full">
-  <button type="button" mat-button color="warn">
-    <mat-icon>delete</mat-icon>
-    Delete
-  </button>
-  <button
-    type="button"
-    mat-flat-button
-    color="primary"
-    (click)="fileInput.click()"
-  >
-    <mat-icon>edit</mat-icon>
-    Edit
-  </button>
+  <div #cropper class="cropper hidden hidden-right">
+    <image-cropper
+      [imageChangedEvent]="imageChangedEvent"
+      [maintainAspectRatio]="true"
+      [aspectRatio]="1"
+      format="png"
+      (imageCropped)="imageCropped($event)"
+      (imageLoaded)="imageLoaded($event)"
+      (cropperReady)="cropperReady()"
+      (loadImageFailed)="loadImageFailed()"
+      [roundCropper]="true"
+    ></image-cropper>
+  </div>
 </div>
 <input
   #fileInput
@@ -56,5 +72,5 @@
   placeholder="Upload a file"
   id="imgInput"
   accept="image/png, image/jpeg"
-  (change)="fileUploaded($event)"
+  (change)="fileChangeEvent($event)"
 />
