--- a/src/app/profile-picture-edit/profile-picture-edit.component.html
+++ b/src/app/profile-picture-edit/profile-picture-edit.component.html
@@ -13,56 +13,85 @@
   </div>
 </div>
 <div class="dialog-content">
-  <div #profilePic class="profile-pic unhidden">
-    <p>The photo that says, "Definitely not a bot!"</p>
-    <div class="flex justify-around items-center image-icon-size">
-      @if(!(publicAvatarUrl.length > 0 )){
-      <mat-icon class="image-icon-size">account_circle</mat-icon>
-      } @else {
-      <div
-        class="relative"
-        [ngClass]="publicAvatarUrl.length > 0 && !loading() ? '' : 'hidden'"
-      >
-        <img
-          [src]="publicAvatarUrl"
-          alt="avatar preview"
-          class="clip-path-circle"
-          width="250px"
-          (load)="loading.set(false)"
-        />
-      </div>
-      @if(loading()){
-      <mat-spinner></mat-spinner>
-      } }
+  <div
+    #profilePic
+    class="profile-pic unhidden flex flex-col gap-4 w-full items-center"
+  >
+    <p class="px-4">The photo that says, "Definitely not a bot!"</p>
+    @if(!(publicAvatarUrl.length > 0 )){
+    <mat-icon class="image-icon-size">account_circle</mat-icon>
+    } @else {
+    <div
+      class="relative"
+      [ngClass]="publicAvatarUrl.length > 0 && !loading() ? '' : 'hidden'"
+    >
+      <img
+        [src]="publicAvatarUrl"
+        alt="avatar preview"
+        class="clip-path-circle"
+        width="250px"
+        (load)="loading.set(false)"
+      />
     </div>
-    <div class="flex gap-2">
-      <button type="button" mat-button color="warn">
-        <mat-icon>delete</mat-icon>
-        Delete
-      </button>
+    @if(loading()){
+    <mat-spinner></mat-spinner>
+    } }
+    <div class="flex gap-2 px-4 grow pb-4 items-end">
+      <button type="button" mat-button color="warn">Delete</button>
       <button
         type="button"
         mat-flat-button
         color="primary"
         (click)="fileInput.click()"
       >
-        <mat-icon>edit</mat-icon>
-        Edit
+        Upload a new image
       </button>
     </div>
   </div>
   <div #cropper class="cropper hidden hidden-right">
-    <image-cropper
-      [imageChangedEvent]="imageChangedEvent"
-      [maintainAspectRatio]="true"
-      [aspectRatio]="1"
-      format="png"
-      (imageCropped)="imageCropped($event)"
-      (imageLoaded)="imageLoaded($event)"
-      (cropperReady)="cropperReady()"
-      (loadImageFailed)="loadImageFailed()"
-      [roundCropper]="true"
-    ></image-cropper>
+    <div class="mb-4 mx-4">
+      <image-cropper
+        [imageChangedEvent]="imageChangedEvent"
+        [maintainAspectRatio]="true"
+        [aspectRatio]="1"
+        format="png"
+        (imageCropped)="imageCropped($event)"
+        (imageLoaded)="imageLoaded($event)"
+        (cropperReady)="cropperReady()"
+        (loadImageFailed)="loadImageFailed()"
+        [roundCropper]="true"
+      ></image-cropper>
+    </div>
+    <div class="flex w-full justify-around mb-4">
+      <button
+        type="button"
+        mat-flat-button
+        color="primary"
+        (click)="showConfirmation()"
+      >
+        Next
+      </button>
+    </div>
+  </div>
+  <div
+    #confirm
+    class="hidden hidden-right flex flex-col gap-4 w-full items-center"
+  >
+    <h3>Your New Profile Picture</h3>
+    <img
+      [src]="croppedImage"
+      alt="new profile picture preview"
+      class="clip-path-circle"
+      width="250px"
+    />
+    <div class="flex gap-2 px-4 grow pb-4 items-end">
+      <button type="button" mat-button (click)="dialogRef.close()">
+        Cancel
+      </button>
+      <button type="button" mat-flat-button color="primary">
+        Save as profile picture
+      </button>
+    </div>
   </div>
 </div>
 <input
